anv regression w/ commit e488773b ("anv: Fast clear depth/stencil surface in vkCmdClearAttachments")
One of our in-house tests (a recording of the game "Hard Reset") began failing after commit e488773b. The player's gun and part of the status overlay are incorrectly shaded. I haven't dug into it deeper to determine exactly how vkCmdClearAttachments() may be causing the incorrect shading. I can provide the app recording and replay tool, or probably convert it to a gfxreconstruct recording. I'm using an Arc A380 GPU. I don't know if this issue is specific to the GPU model.